--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Vue Example</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"></script>
+    <link rel="stylesheet" href="node_modules/bootstrap-vue/dist/bootstrap-vue.css"></script>
   </head>
   <body>
     <div id="app">
