--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue Example</title>
+    <title>Langowski Exercise</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"></script>
     <link rel="stylesheet" href="node_modules/bootstrap-vue/dist/bootstrap-vue.css"></script>
   </head>
